mappers de plato y restaurante, asi como cambio de restaurante array fotos y precio plato. No estoy seguro que funcione mappers. Temporal